Remove padding around container to fix bug on mobile safari

--- a/yolodex/static/css/yolodex/network.css
+++ b/yolodex/static/css/yolodex/network.css
@@ -1,5 +1,4 @@
 .network-container {
-  padding: 5px;
   background-color: #eee;
 }
 
